<?xml version="1.0"?>
<package format="2">
  <name>gtest_test</name>
  <version>0.0.0</version>
  <description>The gtest_test package</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
</package>
